# program-do-faktur

./: .env.example  .env.production.template  .gitignore  README.md  _tmp_session.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_6462f591b285_initial_schema.py  0002_a1b2c3d4e5f6_payment_module.py  0003_b2c3d4e5f6a7_invoice_fa3_fields.py  0004_c3d4e5f6a7b8_transmission_upo.py  0005_d4e5f6a7b8c9_invoice_fa3_type_correction.py  0006_e5f6a7b8c9d0_ksef_adnotacje_fx_zal.py  0007_f6a7b8c9d0e1_ksef_hardening.py  0008_h8i9j0k1l2m3_invoice_direction_app_settings.py  0009_i9j0k1l2m3n4_stock_module.py  0010_j0k1l2m3n4o5_rename_product_sku_to_isbn.py  README.md
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py  middleware.py  security.py  utils.py
app/domain/: __init__.py  enums.py  exceptions.py
app/integrations/: __init__.py
app/persistence/: __init__.py  base.py  db.py
app/schemas/: __init__.py  auth.py  contractor.py  (+6 more)
docker/: Dockerfile  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  nginx.frontend.conf
docs/: copilot_prompt.md  dostosowywanieksef.txt  kontrakt_danych_fa3.txt  migracja_mac_mini.md
frontend/: index.html  invoice.html  login.html  manifest.webmanifest  payments.html  sw.js
frontend-react/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
scripts/: deploy_ds723.sh  seed_monthly_invoices.py  seed_sample_invoices.py  smoke_test.sh  test_ksef_auth.py
tests/: conftest.py  e2e_mvp.py
(+167 files in other folders)
