[project]
name = "ksef-backend"
version = "0.1.0"
description = "Modularny monolit FastAPI do integracji z KSeF i REGON"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15,<2.0",
    "cryptography>=44.0,<46.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "lxml>=5.0,<6.0",
    "pydantic-settings>=2.8,<3.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "PyJWT>=2.10,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "requests>=2.32,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
    "weasyprint>=63.0",
    "zeep>=4.3,<5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.alembic]
script_location = "alembic"
